--- a/Bump/Bump/MainPage.xaml
+++ b/Bump/Bump/MainPage.xaml
@@ -5,7 +5,7 @@
 
     <StackLayout>
         <Frame BackgroundColor="Green" Margin="0" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" 
+            <Label Text="Welcome to Jordan!" 
                    HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
         <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
