--- a/Bump/Bump/Views/About.xaml
+++ b/Bump/Bump/Views/About.xaml
@@ -3,10 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bump.Views.About">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Margin="10" Padding="10" Spacing="10">
+            
+                <Label Text="Our Team"  TextTransform="None" HorizontalOptions="StartAndExpand"
+                   TextColor="#DC384D" FontAttributes="Bold" FontSize="Title"  />
+                <Image Source="undraw_meet_the_team" HorizontalOptions="CenterAndExpand"/>
+
+                <Label Text="Alone we can do so little; together we can do so much."
+                    HorizontalOptions="StartAndExpand"  TextTransform="None" TextColor="#DC384D" FontAttributes="Bold" FontSize="Medium"  Margin="20,40,10,0" VerticalOptions="FillAndExpand" />
+
+            <StackLayout Margin="0" Padding="0" Spacing="5" >
+                <Button ImageSource="email" Text=" Joud  AL-dhadleh" TextColor="Gray" TextTransform="None"  FontSize="Medium"
+                        FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
+                <Button ImageSource="email" Text=" Heba  AL-ahmad" TextColor="Gray" TextTransform="None" FontSize="Medium" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
+                <Button ImageSource="email" Text=" Saja  dahadha" TextColor="Gray" TextTransform="None" FontSize="Medium" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
+                <Button ImageSource="email" Text=" Raghad  AL-khateeb" TextColor="Gray" TextTransform="None" FontSize="Medium" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
+            </StackLayout>
+
+
+
+            <StackLayout Orientation="Horizontal" Margin="10">
+                <Button HorizontalOptions="EndAndExpand" Text="Back to Home" TextTransform="None" TextColor="#DC384D" BackgroundColor="Transparent" FontSize="19" VerticalOptions="EndAndExpand"/>
+
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
