--- a/Bump/Bump/Views/MainPageContribute/ContributeFlyout.xaml
+++ b/Bump/Bump/Views/MainPageContribute/ContributeFlyout.xaml
@@ -2,21 +2,50 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bump.Views.MainPageContribute.ContributeFlyout"
-             Title="Flyout" BackgroundImage="way_4">
+             xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
+             NavigationPage.HasNavigationBar="False"
+             XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D"
+             Title="Flyout" >
+    <Grid Margin="0" Padding="0">
+        <Image Source="way_4" Aspect="AspectFill"/>
+        <StackLayout Margin="0" Padding="10" Spacing="30" BackgroundColor="#CAB44C5A">
+            <Image Source="undraw_dropdown_menu"/>
+            <StackLayout Orientation="Horizontal" Margin="10,0" Padding="0" Spacing="0"
+                     HorizontalOptions="FillAndExpand">
+                <Button Text="English" TextTransform="None" TextColor="#FFFFFF"
+                    FontAttributes="Bold" HorizontalOptions="FillAndExpand" 
+                    CornerRadius="5" BackgroundColor="#DC384D"/>
+                <Button Text="عربي" TextColor="#DC384D" BackgroundColor="#FFFFFF"
+                    FontAttributes="Bold"
+                    CornerRadius="5" HorizontalOptions="FillAndExpand" />
+            </StackLayout>
 
-    <StackLayout Margin="0"  Padding="10" Spacing="30"  BackgroundColor="#4AB44C5A" >
-        <Image Source ="undraw_dropdown_menu"></Image>
-        <StackLayout Orientation="Horizontal" Margin="0"  Padding="0" Spacing="0" HorizontalOptions="CenterAndExpand" >
-            <Button Text="English" TextColor="#FFFFFF" TextTransform="None" FontAttributes="Bold" BackgroundColor="#DC384D"/>
-            <Button Text="عربي" TextColor="#DC384D" FontAttributes="Bold" BackgroundColor="#FFFFFF"/>
+            <StackLayout Margin="0" Padding="0" Spacing="10">
+                <Button ImageSource="customer_service" Text="Contact Us" TextTransform="None"
+                    TextColor="White" FontAttributes="Bold"
+                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
+                    BackgroundColor="Transparent" Padding="0"
+                    Clicked="OpenContactUsPage" />
+                <Button ImageSource="suggestions" Text="Suggestions" TextTransform="None"
+                    TextColor="White" FontAttributes="Bold"
+                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
+                    BackgroundColor="Transparent" Padding="0" Clicked="OpenSuggestionPage"/>
+                <Button ImageSource="invite" Text="Invite a friend" TextTransform="None"
+                    TextColor="White" FontAttributes="Bold"
+                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
+                    BackgroundColor="Transparent" Padding="0" />
+                <Button ImageSource="help" Text="About" TextTransform="None"
+                    TextColor="White" FontAttributes="Bold"
+                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
+                    BackgroundColor="Transparent" Padding="0"
+                    Clicked="OpenAboutPage"/>
+                <Button ImageSource="logout" Text="Log Out" TextColor="#FFFFFF" TextTransform="None" 
+                        FontAttributes="Bold" ContentLayout="left,30" HorizontalOptions="StartAndExpand"
+                        BackgroundColor="Transparent" Clicked="OpenMainPage" Padding="0" />
+            </StackLayout>
         </StackLayout>
-        <StackLayout Margin="0" Padding="0" Spacing="20" >
-            <Button ImageSource="customer_service" Text=" Contact Us" TextColor="#FFFFFF" TextTransform="None" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
-            <Button ImageSource="suggestions" Text=" Suggestions" TextColor="#FFFFFF" TextTransform="None" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
-            <Button ImageSource="invite" Text=" Invite a Friend" TextColor="#FFFFFF" TextTransform="None" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
-            <Button ImageSource="help" Text=" About" TextColor="#FFFFFF" TextTransform="None" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
-            <Button ImageSource="logout" Text=" Log Out" TextColor="#FFFFFF" TextTransform="None" FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" />
-        </StackLayout>
+    </Grid>
 
-    </StackLayout>
+
+
 </ContentPage>
