--- a/Bump/Bump/Views/MainPageView/MainPage.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPage.xaml
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Bump.Views.MainPageView.MainPage"/>
+             x:Class="Bump.Views.MainPageView.MainPage"
+            xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
+             NavigationPage.HasNavigationBar="False"
+             XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D"/>
